--- a/src/node/16.13.1/Dockerfile.windows-amd64
+++ b/src/node/16.13.1/Dockerfile.windows-amd64
@@ -2,9 +2,9 @@ FROM mcr.microsoft.com/windows/servercore:ltsc2022
 
 USER ContainerAdministrator
 
-COPY ./node-v16.13.1-x64.msi .
-COPY ./pngquant.zip .
-COPY ./vc_redist.x64.exe .
+COPY ./windows-packages/node-v16.13.1-x64.msi .
+COPY ./windows-packages/pngquant.zip .
+COPY ./windows-packages/vc_redist.x64.exe .
 
 RUN powershell -Command "Expand-Archive -Path './pngquant.zip' -DestinationPath '/Windows/System32'" \
     && start /B ./vc_redist.x64.exe /quiet /install \
