--- a/.github/workflows/buildx.yml
+++ b/.github/workflows/buildx.yml
@@ -20,51 +20,51 @@ env:
 
 jobs:
   # ----------------------------------- build -----------------------------------
-  # build-hub-windows:
-  #   runs-on: windows-latest
-  #   name: Images to DockerHub (Windows)
-  #   steps:
-  #     # checkout source code
-  #     - uses: actions/checkout@v2
+  build-hub-windows:
+    runs-on: windows-latest
+    name: Images to DockerHub (Windows)
+    steps:
+      # checkout source code
+      - uses: actions/checkout@v2
 
-  #     # login docker hub
-  #     - name: Login to DockerHub
-  #       uses: azure/docker-login@v1
-  #       with:
-  #         username: ${{env.DOCKERHUB_USERNAME}}
-  #         password: ${{env.DOCKERHUB_TOKEN}}
+      # login docker hub
+      - name: Login to DockerHub
+        uses: azure/docker-login@v1
+        with:
+          username: ${{env.DOCKERHUB_USERNAME}}
+          password: ${{env.DOCKERHUB_TOKEN}}
 
-  #     # build
-  #     - name: build 1
-  #       shell: pwsh
-  #       working-directory: ./build
-  #       run: ./build-push.ps1 -Namespace hyx1229
+      # build
+      - name: build 1
+        shell: pwsh
+        working-directory: ./build
+        run: ./build-push.ps1 -Namespace hyx1229
 
-  # build-hub-linux:
-  #   runs-on: ubuntu-22.04
-  #   name: Images to DockerHub (Linux)
-  #   needs: [build-hub-windows]
-  #   steps:
-  #     # checkout source code
-  #     - uses: actions/checkout@v2
+  build-hub-linux:
+    runs-on: ubuntu-22.04
+    name: Images to DockerHub (Linux)
+    needs: [build-hub-windows]
+    steps:
+      # checkout source code
+      - uses: actions/checkout@v2
 
-  #     # login docker hub
-  #     - name: Login to DockerHub
-  #       uses: docker/login-action@v1
-  #       with:
-  #         username: ${{env.DOCKERHUB_USERNAME}}
-  #         password: ${{env.DOCKERHUB_TOKEN}}
+      # login docker hub
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{env.DOCKERHUB_USERNAME}}
+          password: ${{env.DOCKERHUB_TOKEN}}
 
-  #     # build
-  #     - name: build 1
-  #       shell: pwsh
-  #       working-directory: ./build
-  #       run: ./build-push.ps1 -Namespace hyx1229
+      # build
+      - name: build 1
+        shell: pwsh
+        working-directory: ./build
+        run: ./build-push.ps1 -Namespace hyx1229
 
   build-aliyun:
     runs-on: ubuntu-22.04
     name: Images to Aliyun
-    # needs: [build-hub-linux]
+    needs: [build-hub-linux]
     steps:
       # checkout source code
       - uses: actions/checkout@v2
