--- a/src/nginx/1.19.6-wait-for-it/Dockerfile.windows-amd64
+++ b/src/nginx/1.19.6-wait-for-it/Dockerfile.windows-amd64
@@ -1,6 +1,6 @@
 FROM hyx1229/nginx:1.19.6
 
-COPY ./wait-for-it.ps1 .
+COPY ./scripts/wait-for-it.ps1 .
 
 ENV NGINX_WAITHOST=localhost NGINX_WAITPORT=80
 
