pwsh:lts-windowsservercore-ltsc2022-docker-24.0.2

--- a/src/powershell/lts-windowsservercore-ltsc2022-docker-24.0.2/Dockerfile.windows-amd64
+++ b/src/powershell/lts-windowsservercore-ltsc2022-docker-24.0.2/Dockerfile.windows-amd64
@@ -10,7 +10,11 @@ Invoke-WebRequest 'https://raw.githubusercontent.com/microsoft/Windows-Container
 ./install-docker-ce.ps1 -DockerVersion '24.0.2' -NoRestart; `
 ./install-docker-ce.ps1 -DockerVersion '24.0.2' -NoRestart;"
 
-COPY ./docker-compose.exe .
+# COPY ./docker-compose.exe .
+
+# Download docker-compose for the corresponding version of docker.
+RUN powershell Invoke-WebRequest "https://github.com/docker/compose/releases/download/v2.18.1/docker-compose-windows-x86_64.exe" `
+    -UseBasicParsing -OutFile c:\docker\docker-compose.exe
 
 RUN setx PATH "%PATH%;C:\docker"
 
