--- a/src/dotnet-aspnet/6.0-powershell-7.2.19/Dockerfile.windows-amd64
+++ b/src/dotnet-aspnet/6.0-powershell-7.2.19/Dockerfile.windows-amd64
@@ -1,13 +1,8 @@
 # escape=`
-# Copyright (c) Microsoft Corporation.
-# Licensed under the MIT License.
 
 # Args used by from statements must be defined here:
 ARG InstallerVersion=nanoserver
-ARG dockerHost=mcr.microsoft.com
 ARG InstallerRepo=mcr.microsoft.com/powershell
-ARG NanoServerRepo=windows/nanoserver
-ARG tag=ltsc2022
 
 # Use server core as an installer container to extract PowerShell,
 # As this is a multi-stage build, this stage will eventually be thrown away
@@ -43,9 +38,8 @@ RUN Write-host "Verifying valid Version..."; `
     Invoke-WebRequest -Uri $url -outfile /installer/powershell.zip -verbose; `
     Expand-Archive /installer/powershell.zip -DestinationPath \PowerShell
 
-# Install PowerShell into NanoServer
-# FROM mcr.microsoft.com/${NanoServerRepo}:${tag}
-FROM mcr.microsoft.com/dotnet/aspnet:6.0
+# Install PowerShell into aspnet:6.0
+FROM hyx1229/dotnet-aspnet:6.0
 
 # Copy PowerShell Core from the installer container
 ENV ProgramFiles="C:\Program Files" `
