--- a/src/node/16.13.1/Dockerfile.windows-amd64
+++ b/src/node/16.13.1/Dockerfile.windows-amd64
@@ -14,8 +14,7 @@ RUN $node_version='16.13.1'; \
     $vc_redist_installUrl='https://download.microsoft.com/download/9/3/F/93FCF1E7-E6A4-478B-96E7-D4B285925B00/vc_redist.x64.exe'; \
     Invoke-WebRequest -OutFile './vc_redist.x64.exe' $vc_redist_installUrl; \
     Start-Process -FilePath './vc_redist.x64.exe' -NoNewWindow -ArgumentList '/install', '/quiet', '/norestart' -Wait; \
-    Remove-Item -Force ./vc_redist.x64.exe; \
-    "
+    Remove-Item -Force ./vc_redist.x64.exe;
 
 RUN cmd.exe /c "setx PATH \"%PATH%;C:\nodejs\"" /M
 
