--- a/src/dotnet-aspnet/6.0-powershell-7.2.19/Dockerfile.windows-amd64
+++ b/src/dotnet-aspnet/6.0-powershell-7.2.19/Dockerfile.windows-amd64
@@ -1,5 +1,5 @@
 # escape=`
-
+# Referenced in https://github.com/PowerShell/PowerShell-Docker/blob/master/release/7-2/nanoserver2022/docker/Dockerfile
 # Args used by from statements must be defined here:
 ARG InstallerVersion=nanoserver
 ARG InstallerRepo=mcr.microsoft.com/powershell
