--- a/src/redis/3.0.504/Dockerfile.windows-amd64
+++ b/src/redis/3.0.504/Dockerfile.windows-amd64
@@ -10,8 +10,8 @@ WORKDIR /redis
 
 # other version https://github.com/tporadowski/redis/releases/tag/v5.0.14.1
 RUN $redis_version='3.0.504'; `
-    $redis_downloadUrl= 'https://github.com/microsoftarchive/redis/releases/download/win-${redis_version}/Redis-x64-${redis_version}.zip'; `
-    pwsh Invoke-WebRequest -OutFile './redis.zip' -Uri $redis_downloadUrl; `
+    $redis_downloadUrl='https://github.com/microsoftarchive/redis/releases/download/win-${redis_version}/Redis-x64-${redis_version}.zip'; `
+    Invoke-WebRequest -OutFile './redis.zip' -Uri $redis_downloadUrl; `
     Expand-Archive -Path './redis.zip' -DestinationPath '/redis'; `
     Remove-Item -Force './redis.zip';
 
