--- a/src/redis/3.0.504/Dockerfile.windows-amd64
+++ b/src/redis/3.0.504/Dockerfile.windows-amd64
@@ -1,14 +1,16 @@
 FROM hyx1229/powershell:lts-nanoserver-ltsc2022
 
+SHELL ["pwsh", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue';"]
+
 USER ContainerAdministrator
 
 WORKDIR /redis
 
 # other version https://github.com/tporadowski/redis/releases/tag/v5.0.14.1
-RUN pwsh -Command " $ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue'; \
-    $redis_version='3.0.504'; \
-    $redis_downloadUrl='https://github.com/microsoftarchive/redis/releases/download/win-${redis_version}/Redis-x64-${redis_version}.zip'; \
-    Invoke-WebRequest -OutFile './redis.zip' -Uri $redis_downloadUrl; \
+RUN $redis_version='3.0.504'; \
+    $redis_downloadUrl="https://github.com/microsoftarchive/redis/releases/download/win-${redis_version}/Redis-x64-${redis_version}.zip"; \
+    echo $redis_downloadUrl; \
+    Invoke-RestMethod -OutFile './redis.zip' -Uri $redis_downloadUrl; \
     Expand-Archive -Path './redis.zip' -DestinationPath '/redis'; \
     Remove-Item -Force './redis.zip';
 
