--- a/src/rabbitmq/3.11.10-management-windowsservercore-ltsc2022/Dockerfile.windows-amd64
+++ b/src/rabbitmq/3.11.10-management-windowsservercore-ltsc2022/Dockerfile.windows-amd64
@@ -14,7 +14,7 @@ ENV ERLANG_VERSION=$ERLANG_VERSION \
     ERLANG_HOME=C:\erlang \
     RABBITMQ_BASE=C:\rabbitmq\data \
     RABBITMQ_CONFIG_FILE=c:\rabbitmq\data\rabbitmq.conf \
-    PATH=%PATH%;%ERLANG_HOME%\bin
+    PATH=$PATH;$ERLANG_HOME\bin
 
 RUN Write-Host -Object 'Downloading Erlang OTP' ; \
     Invoke-WebRequest -UseBasicParsing -Uri $('http://erlang.org/download/otp_win64_{0}.exe' -f $env:ERLANG_VERSION) -OutFile './otp_win64.exe'; \
@@ -37,7 +37,7 @@ RUN Write-Host -Object 'Downloading Erlang OTP' ; \
 RUN New-Item -Path 'C:\rabbitmq\data\rabbitmq.conf' -ItemType File -Force; \
     Set-Content -Path 'C:\rabbitmq\data\rabbitmq.conf' -Value 'loopback_users.guest = false'
 
-RUN cmd.exe /c "setx PATH \"%PATH%;%ERLANG_HOME%\bin\"" /M
+# RUN cmd.exe /c "setx PATH \"%PATH%;%ERLANG_HOME%\bin\"" /M
 
 RUN c:\rabbitmq\sbin\rabbitmq-plugins.bat enable rabbitmq_management --offline
 
