修改 rabbitmq dockerfile

--- a/src/rabbitmq/3.11.10-management-windowsservercore-ltsc2022/Dockerfile.windows-amd64
+++ b/src/rabbitmq/3.11.10-management-windowsservercore-ltsc2022/Dockerfile.windows-amd64
@@ -4,7 +4,7 @@ ARG RABBITMQ_VERSION=3.11.10
 FROM mcr.microsoft.com/windows/servercore:ltsc2022
 USER ContainerAdministrator
 
-SHELL ["powershell", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue'; "]
+# SHELL ["powershell", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue'; "]
 
 ARG ERLANG_VERSION
 ARG RABBITMQ_VERSION
@@ -13,10 +13,10 @@ ENV ERLANG_VERSION=$ERLANG_VERSION \
     RABBITMQ_VERSION=$RABBITMQ_VERSION \
     ERLANG_HOME=C:\erlang \
     RABBITMQ_BASE=C:\rabbitmq\data \
-    RABBITMQ_CONFIG_FILE=c:\rabbitmq\data\rabbitmq.conf \
-    PATH=$PATH;$ERLANG_HOME\bin
+    RABBITMQ_CONFIG_FILE=c:\rabbitmq\data\rabbitmq.conf
 
-RUN Write-Host -Object 'Downloading Erlang OTP' ; \
+RUN powershell -Command $ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue'; \
+    Write-Host -Object 'Downloading Erlang OTP' ; \
     Invoke-WebRequest -UseBasicParsing -Uri $('http://erlang.org/download/otp_win64_{0}.exe' -f $env:ERLANG_VERSION) -OutFile './otp_win64.exe'; \
     Unblock-File -Path './otp_win64.exe'; \
     Write-Host -Object 'Installing Erlang OTP'; \
