--- a/src/rabbitmq/3.11.10-management-windowsservercore-ltsc2022/Dockerfile.windows-amd64
+++ b/src/rabbitmq/3.11.10-management-windowsservercore-ltsc2022/Dockerfile.windows-amd64
@@ -37,6 +37,8 @@ RUN powershell -Command $ErrorActionPreference = 'Stop'; $ProgressPreference = '
 RUN New-Item -Path 'C:\rabbitmq\data\rabbitmq.conf' -ItemType File -Force; \
     Set-Content -Path 'C:\rabbitmq\data\rabbitmq.conf' -Value 'loopback_users.guest = false'
 
+RUN setx /M PATH "%PATH%;%ERLANG_HOME%\bin"
+
 # RUN cmd.exe /c "setx PATH \"%PATH%;%ERLANG_HOME%\bin\"" /M
 
 RUN c:\rabbitmq\sbin\rabbitmq-plugins.bat enable rabbitmq_management --offline
