--- a/src/rabbitmq/3.11.10-management-windowsservercore-ltsc2022/Dockerfile.windows-amd64
+++ b/src/rabbitmq/3.11.10-management-windowsservercore-ltsc2022/Dockerfile.windows-amd64
@@ -15,6 +15,10 @@ ENV ERLANG_VERSION=$ERLANG_VERSION \
     RABBITMQ_BASE=C:\rabbitmq\data \
     RABBITMQ_CONFIG_FILE=c:\rabbitmq\data\rabbitmq.conf
 
+RUN setx /M PATH "%PATH%;%ERLANG_HOME%\bin"
+
+RUN set
+
 RUN powershell -Command $ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue'; \
     Write-Host -Object 'Downloading Erlang OTP' ; \
     Invoke-WebRequest -UseBasicParsing -Uri $('http://erlang.org/download/otp_win64_{0}.exe' -f $env:ERLANG_VERSION) -OutFile './otp_win64.exe'; \
@@ -37,7 +41,6 @@ RUN powershell -Command $ErrorActionPreference = 'Stop'; $ProgressPreference = '
 # RUN New-Item -Path 'C:\rabbitmq\data\rabbitmq.conf' -ItemType File -Force; \
 #     Set-Content -Path 'C:\rabbitmq\data\rabbitmq.conf' -Value 'loopback_users.guest = false'
 
-RUN setx /M PATH "%PATH%;%ERLANG_HOME%\bin"
 
 # RUN cmd.exe /c "setx PATH \"%PATH%;%ERLANG_HOME%\bin\"" /M
 
