--- a/src/rabbitmq/3.11.10-management-windowsservercore-ltsc2022/Dockerfile.windows-amd64
+++ b/src/rabbitmq/3.11.10-management-windowsservercore-ltsc2022/Dockerfile.windows-amd64
@@ -1,3 +1,5 @@
+# escape=`
+
 ARG ERLANG_VERSION=25.3.2.9
 ARG RABBITMQ_VERSION=3.11.10
 
@@ -9,33 +11,33 @@ USER ContainerAdministrator
 ARG ERLANG_VERSION
 ARG RABBITMQ_VERSION
 
-ENV ERLANG_VERSION=$ERLANG_VERSION \
-    RABBITMQ_VERSION=$RABBITMQ_VERSION \
-    ERLANG_HOME=C:\erlang \
-    RABBITMQ_BASE=C:\rabbitmq\data \
+ENV ERLANG_VERSION=$ERLANG_VERSION `
+    RABBITMQ_VERSION=$RABBITMQ_VERSION `
+    ERLANG_HOME=C:\erlang `
+    RABBITMQ_BASE=C:\rabbitmq\data `
     RABBITMQ_CONFIG_FILE=c:\rabbitmq\data\rabbitmq.conf
 
 RUN setx /M PATH "%PATH%;%ERLANG_HOME%\bin"
 
 RUN set
 
-RUN powershell -Command $ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue'; \
-    Write-Host -Object 'Downloading Erlang OTP' ; \
-    Invoke-WebRequest -UseBasicParsing -Uri $('http://erlang.org/download/otp_win64_{0}.exe' -f $env:ERLANG_VERSION) -OutFile './otp_win64.exe'; \
-    Unblock-File -Path './otp_win64.exe'; \
-    Write-Host -Object 'Installing Erlang OTP'; \
-    Start-Process -NoNewWindow -Wait -FilePath './otp_win64.exe' -ArgumentList /S, /D=${env:ERLANG_HOME}; \
-    Write-Host -Object 'Removing Erlang OTP Installer'; \
-    Remove-Item -Force './otp_win64.exe'; \
-    Write-Host -Object 'Done Installing Erlang OTP'; \
-    Write-Host -Object 'Downloading RabbitMQ Zip'; \
-    Invoke-WebRequest -UseBasicParsing -Uri $('https://github.com/rabbitmq/rabbitmq-server/releases/download/v3.11.10/rabbitmq-server-windows-{0}.zip' -f $env:RABBITMQ_VERSION) -OutFile './rabbitmq.zip'; \
-    Unblock-File -Path './rabbitmq.zip'; \
-    Write-Host -Object 'Extracting RabbitMQ Zip'; \
-    Expand-Archive -Path './rabbitmq.zip' -DestinationPath '/'; \
-    Rename-Item -Path "/rabbitmq_server-${env:RABBITMQ_VERSION}" -NewName 'rabbitmq'; \
-    Write-Host -Object 'Removing RabbitMQ Zip'; \
-    Remove-Item -Path './rabbitmq.zip'; \
+RUN powershell -Command $ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue'; `
+    Write-Host -Object 'Downloading Erlang OTP' ; `
+    Invoke-WebRequest -UseBasicParsing -Uri $('http://erlang.org/download/otp_win64_{0}.exe' -f $env:ERLANG_VERSION) -OutFile './otp_win64.exe'; `
+    Unblock-File -Path './otp_win64.exe'; `
+    Write-Host -Object 'Installing Erlang OTP'; `
+    Start-Process -NoNewWindow -Wait -FilePath './otp_win64.exe' -ArgumentList /S, /D=${env:ERLANG_HOME}; `
+    Write-Host -Object 'Removing Erlang OTP Installer'; `
+    Remove-Item -Force './otp_win64.exe'; `
+    Write-Host -Object 'Done Installing Erlang OTP'; `
+    Write-Host -Object 'Downloading RabbitMQ Zip'; `
+    Invoke-WebRequest -UseBasicParsing -Uri $('https://github.com/rabbitmq/rabbitmq-server/releases/download/v3.11.10/rabbitmq-server-windows-{0}.zip' -f $env:RABBITMQ_VERSION) -OutFile './rabbitmq.zip'; `
+    Unblock-File -Path './rabbitmq.zip'; `
+    Write-Host -Object 'Extracting RabbitMQ Zip'; `
+    Expand-Archive -Path './rabbitmq.zip' -DestinationPath '/'; `
+    Rename-Item -Path "/rabbitmq_server-${env:RABBITMQ_VERSION}" -NewName 'rabbitmq'; `
+    Write-Host -Object 'Removing RabbitMQ Zip'; `
+    Remove-Item -Path './rabbitmq.zip'; `
     Write-Host -Object 'Done Installing RabbitMQ'
 
 # RUN New-Item -Path 'C:\rabbitmq\data\rabbitmq.conf' -ItemType File -Force; \
