--- a/src/rabbitmq/3.11.10-management-windowsservercore-ltsc2022/Dockerfile.windows-amd64
+++ b/src/rabbitmq/3.11.10-management-windowsservercore-ltsc2022/Dockerfile.windows-amd64
@@ -35,7 +35,7 @@ RUN Write-Host -Object 'Downloading Erlang OTP' ; `
     Remove-Item -Path './rabbitmq.zip'; `
     Write-Host -Object 'Done Installing RabbitMQ'
 
-RUN setx /M PATH "%PATH%;%ERLANG_HOME%\bin"
+RUN cmd.exe /c "setx PATH \"%PATH%;%ERLANG_HOME%\bin\"" /M
 
 RUN c:\rabbitmq\sbin\rabbitmq-plugins.bat enable rabbitmq_management --offline
 
