修改命名空间，重新推送镜像

--- a/src/dotnet-aspnet/6.0-powershell-7.2.19/Dockerfile.windows-amd64
+++ b/src/dotnet-aspnet/6.0-powershell-7.2.19/Dockerfile.windows-amd64
@@ -39,7 +39,7 @@ RUN Write-host "Verifying valid Version..."; `
     Expand-Archive /installer/powershell.zip -DestinationPath \PowerShell
 
 # Install PowerShell into aspnet:6.0
-FROM hyx1229/dotnet-aspnet:6.0
+FROM eternalfree/dotnet-aspnet:6.0
 
 # Copy PowerShell Core from the installer container
 ENV ProgramFiles="C:\Program Files" `
