--- a/.github/workflows/buildx.yml
+++ b/.github/workflows/buildx.yml
@@ -38,7 +38,7 @@ jobs:
       - name: build 1
         shell: pwsh
         working-directory: ./build
-        run: ./build-push.ps1 -Namespace hyx1229
+        run: ./build-push.ps1
 
   build-hub-linux:
     runs-on: ubuntu-22.04
@@ -59,7 +59,7 @@ jobs:
       - name: build 1
         shell: pwsh
         working-directory: ./build
-        run: ./build-push.ps1 -Namespace hyx1229
+        run: ./build-push.ps1
 
   build-aliyun-windows:
     runs-on: windows-latest
@@ -125,7 +125,7 @@ jobs:
       - name: build
         shell: pwsh
         working-directory: ./build
-        run: ./build-sync.ps1  -TargetNamespace hyx1229
+        run: ./build-sync.ps1
 
   sync-aliyun:
     runs-on: ubuntu-22.04
