--- a/src/redis/3.0.504/Dockerfile.windows-amd64
+++ b/src/redis/3.0.504/Dockerfile.windows-amd64
@@ -1,4 +1,4 @@
-FROM hyx1229/powershell:lts-nanoserver-ltsc2022
+FROM eternalfree/powershell:lts-nanoserver-ltsc2022
 
 SHELL ["pwsh", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue';"]
 
