--- a/src/docker-swarm-node-exporter/v0.16.0/Dockerfile.linux-arm64.linux-amd64
+++ b/src/docker-swarm-node-exporter/v0.16.0/Dockerfile.linux-arm64.linux-amd64
@@ -6,6 +6,6 @@ USER root
 
 COPY ./scripts/startup.sh /startup.sh
 
-RUN chomd +x /startup.sh
+RUN chmod +x /startup.sh
 
 ENTRYPOINT  [ "/startup.sh" ]
